fix launch()